force-app/main/default/objects/Provider_Appointment__c/Provider_Appointment__c.object-meta.xml
<CustomObject>
    <description>Appointments scheduled with providers</description>
    <label>Provider Appointment</label>
    <nameField>
        <label>Provider Appointment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Appointments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>