force-app/main/default/objects/Provider_Appointment__c/fields/Duration_HRS__c.field-meta.xml
<CustomField>
    <fullName>Duration_HRS__c</fullName>
    <label>Duration(HRS)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.5</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>1.5</fullName>
            </value>
            <value>
                <fullName>2.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>