force-app/main/default/objects/Provider_Appointment__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <referenceTo>Provider__c</referenceTo>
    <relationshipLabel>Provider Appointments</relationshipLabel>
    <relationshipName>Provider_Appointments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>